# NilVec

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  main.py  nilvec.pyi  pyproject.toml
.zig-cache/o/02afbaa921c5650a6375f6e8ebd7149b/: build
.zig-cache/o/0802225761559916ba2c886a9857e152/: build
.zig-cache/o/12a0a27a1a2ed15b32fbe69a563e4177/: build
.zig-cache/o/15003346a6edda3c271c58d0a5f97ea0/: NilVec
.zig-cache/o/1dfd980caf5845ba0e1a5deb45333a2d/: build
.zig-cache/o/2dfb42cfe340368c073bd8c324a4140a/: dependencies.zig
.zig-cache/o/4797d4c197f47d452df64050ac6d84c2/: build
.zig-cache/o/4a4f83cd8f89e25e7e30caf8adc8c563/: NilVec
.zig-cache/o/4b8e5af34c64f2c7fda3ea10cce3b3d8/: build
.zig-cache/o/6a42f0e6fd45d4087f52180b502788ee/: build
.zig-cache/o/6cb02af7433101fa22ba44a3c64158a9/: test
.zig-cache/o/6e1af2083024af3e86b18fc9bafc0443/: NilVec
.zig-cache/o/734837e70e3969862a82a8a0ca9e8f46/: test
.zig-cache/o/7ad03e67afe18f31492423be0945198d/: NilVec
.zig-cache/o/8cec16cae186af718a801761286f186b/: build
.zig-cache/o/91418b2117a2fe08e086987cac237cff/: build
.zig-cache/o/91f09488519088f2eb93ad8e575c5a62/: build
.zig-cache/o/9f4050bed9c1af68218040c95b63ec69/: NilVec
.zig-cache/o/a8680ff99247c5a2646467c6a3d4a148/: NilVec
.zig-cache/o/ae73a8020b8cf879a184b4a3b27c1ccc/: test
.zig-cache/o/c4742a954eb152bcc604d8565342aa4b/: build
.zig-cache/o/c537ebbc68d41532d6f255855538f6f4/: test
.zig-cache/o/c5c15e2992e8f55390a355a0f2df2b3a/: test
.zig-cache/o/d350ea8deb7ddaf8874908fab7113c9c/: build
.zig-cache/o/e52782971bbbada585d11b4b42cfb357/: build
.zig-cache/o/f8300958a5ea8c361af92069158e04dd/: test
src/: Candidate.zig  Filter.zig  Flat.zig  HNSW.zig  ID.zig  Index.zig  Metadata.zig  Metric.zig  MinMaxHeap.zig  SkipList.zig  candidate.zig  errors.zig  filter.zig  flat.cu  flat.rs  flat.zig  hnsw.rs  hnsw.zig  index.rs  index.zig  lib.rs  main.zig  metric.rs  min_max_heap.zig  root.zig
