[package]
name = "nilvec"
version = "0.1.0"
edition = "2021"
description = "A library for approximate nearest neighbor search in Rust."
license = "MIT"
repository = "https://github.com/cldrake01/NilVec"
documentation = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nilvec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
ordered-float = "4.6.0"
rand = "0.9.0"
