[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "nilvec"
auhtors = [{ name = "Collin Drake", email = "collinlindendrake@gmail.com" }]
maintainers = [{ name = "Collin Drake", email = "collinlindendrake@gmail.com" }]
description = "A lightweight library for nearest neighbor search in Rust."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pyright]
venvPath = "."
venv = ".venv"

